@@ -47,6 +47,8 @@ extern int panel_refresh;
 extern Task *task_active;
 extern Task *task_drag;
 extern Task *task_urgent;
+extern int  tick_urgent;
+extern int  max_tick_urgent;
 
 
 typedef struct {
