@@ -1,3 +1,6 @@
+2009-06-20
+- 'urgent_nb_of_blink' allow to choose the number of blink
+
 2009-06-19
 - change systray code. fixed issue 91.
 
